Removed calls to boxed primitive constructors in Reflect.